objects/BMCServiceDesk__BMC_Media__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Capabilities__c</fullName>
        <label>Capabilities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CompressionMethod__c</fullName>
        <label>Compression Method</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DefaultBlockSize__c</fullName>
        <label>Default Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DriveSCSITargetID__c</fullName>
        <label>Drive SCSI Target ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DriveSize__c</fullName>
        <label>Drive Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DriverInterfaceType__c</fullName>
        <label>Driver Interface Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxBlockSize__c</fullName>
        <label>Maximum Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxMediaSize__c</fullName>
        <label>Maximum Media Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MediaType__c</fullName>
        <label>Media Type</label>
        <picklist>
            <picklistValues>
                <fullName>Removable media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed hard disk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MinBlockSize__c</fullName>
        <label>Minimum Block Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfMediaSupported__c</fullName>
        <label>Number Of Media Supported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>